--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     	<div class="social">
     		<a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
     		<a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-    		<a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+    		<a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
     		<a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
     		<a href="https://www.pinterest.fr/"><i class="fab fa-pinterest"></i></a>
     	</div>
