--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
 
 	<!-- nav bar section  -->
 	<div class="navbar"> 
-				<a href="https://alexismllt.github.io/gaijincorporation/" id="btn-white">Home</a>
-				<a href="#" id="btn-white">Mangas</a>
-				<a href="#" id="btn-white">Decoration</a>
-				<a href="#" id="btn-white">Food</a>
-				<a href="#" id="btn-white">About us</a>
+				<a href="index.html" id="btn-white">Home</a>
+				<a href="mangas.html" id="btn-white">Mangas</a>
+				<a href="decoration.html" id="btn-white">Decoration</a>
+				<a href="food.html" id="btn-white">Food</a>
+				<a href="aboutus.html" id="btn-white">About us</a>
 	</div>
+
 	<!-- banner section  -->
 	<div class="banner">
 			<h1 class="bigtitle">Gaijin Corp.</h1>
 			<h2 class="title-white">"The stranger is a friend we have not yet met"</h2>
 			<h3 class="japan">見知らぬ人とは、まだ会ったことのない友人のことです</h3>
-			<a href="#"id="btn-blue">
+			<a href="index.html#slide"id="btn-blue">
 				Discover
 			</a>
 	</div>
@@ -40,8 +41,8 @@
 		<h2 class="presentation">Our company</h2>
 	<div class="descriptiontext">
 		<p><strong>Your bones don't break, mine do.</strong> That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, <strong>we are connected</strong>, you and I. We're on the same curve, just on opposite ends.</p>
-		<div class="middlejap"><h4> 見知らぬ人とは、まだ会ったことのない友人のことです</h4></div>
-		<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and <strong>the tyranny of evil men</strong>. Blessed is he who, in the name of charity and good will, shepherds the weak through <strong>the valley of darkness</strong>, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know  <strong>my name is the Lord</strong> when I lay My vengeance upon thee.</p>
+		<div class="middlejap" id="slide"><h4> 見知らぬ人とは、まだ会ったことのない友人のことです</h4></div>
+		<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and <strong>the tyranny of evil men</strong>. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, <strong>for he is truly his brother's keeper and the finder of lost children.</strong> And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know  <strong>my name is the Lord</strong> when I lay My vengeance upon thee.</p>
 	</div>
 	</div>
 	<!-- cards section  -->
@@ -50,31 +51,32 @@
 	<div class="cards">
 		<div class="card">
 			<img src="images/manga.png" alt="manga">
-			<a href="#"id="btn-one">
+			<a href="mangas.html"id="btn-one">
 				Mangas (マンガ)</a>
 			<p>All the manga universe</p>
 		</div>
 		<div class="card">
 			<img src="images/decoration.png" alt="décoration">
-			<a href="#"id="btn-second">
+			<a href="decoration.html"id="btn-second">
 				Decoration (デコレーション)</a>
-			<p>Live in a japan environment</p>
+			<p>Live in a japanese environment</p>
 		</div>
 		<div class="card">
-			<img src="images/alimentation.png" alt="ramen">
-			<a href="#"id="btn-third">Food (食品)</a>
+			<img src="images/alimentation.png" alt="sushi">
+			<a href="food.html"id="btn-third">Food (食品)</a>
 			<p>Eat like a japanese</p>
 		</div>
 	</div>	
 	</div>
 	<!-- text section  -->
 	<div class="container">
-		<h2 class="presentation"></h2>
+		<h2 class="presentation"></h2>	
 	<div class="text">
 		<p>Normally, <strong>both your asses would be dead as fucking fried chicken</strong>, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. <strong>Besides</strong>, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
 		<div class="othermiddle"><h4>本来なら 2人とも死んでもおかしくないが、俺が過渡期に あるときにた またまこんなこと をしたから、殺したくないし、</h4></div>
 		<p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, <strong>I'm gonna shoot you in the head then and there.</strong> Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. <strong>You listen: </strong>we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
 		<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and <strong>the tyranny of evil men</strong>. Blessed is he who, in the name of charity and good will, shepherds the weak through <strong>the valley of darkness</strong>, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know  <strong>my name is the Lord</strong> when I lay My vengeance upon thee.</p>
+	</div>
 	</div>
 
 	<!-- number section  -->
@@ -103,6 +105,9 @@
 		<div class="othermiddle"><h4>本来なら 2人とも死んでもおかしくないが、俺が過渡期に あるときにた またまこんなこと をしたから、殺したくないし、</h4></div>
 		<p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, <strong>I'm gonna shoot you in the head then and there.</strong> Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. <strong>You listen: </strong>we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
 		<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and <strong>the tyranny of evil men</strong>. Blessed is he who, <strong>in the name of charity and good will,</strong> shepherds the weak through <strong>the valley of darkness</strong>, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know  <strong>my name is the Lord</strong> when I lay My vengeance upon thee.</p>
+	</div>
+	<div class="containerimage">
+		<img src="images/logopage.png" alt="Logogaijin">
 	</div>
 
 	<!-- footer section  -->
