--- a/decoration.html
+++ b/decoration.html
@@ -23,7 +23,57 @@
 				<a href="decoration.html" id="btn-white">Decoration</a>
 				<a href="food.html" id="btn-white">Food</a>
 				<a href="aboutus.html" id="btn-white">About us</a>
+  		</div>
+
+	<!-- Layout section -->
+  		<div class="decorationlayout">
+		<h2 class="presentationdecoration"> Decoration </h2>
+		
+
+	<div class="grid-container">
+  		<div class="Firstdecoration">
+				<h2 class="titledecoration">Tokyo inspiration</h2>
+					<h3 class="japandecoration">東京のインスピレーション</h3>
+						<a href="#"id="btn-purple">
+						Discover
+						</a></div>
 	</div>
+
+	<div class="grid-containerone">
+  		<div class="Firstdecoration">
+				<h2 class="titledecoration">Osaka inspiration</h2>
+					<h3 class="japandecoration">大阪のインスピレーション</h3>
+						<a href="#"id="btn-purple">
+						Discover
+						</a></div>
+	</div>
+
+	<div class="grid-containersecond">
+  		<div class="Firstdecoration">
+				<h2 class="titledecoration">Traditional inspiration</h2>
+					<h3 class="japandecoration">伝統的なインスピレーション</h3>
+						<a href="#"id="btn-purple">
+						Discover
+						</a></div>
+	</div>
+
+	<div class="grid-containerthird">
+  		<div class="Firstdecoration">
+				<h2 class="titledecoration">New age inspiration</h2>
+					<h3 class="japandecoration">ニューエイジ・インスピレーション</h3>
+						<a href="#"id="btn-purple">
+						Discover
+						</a></div>
+	</div>
+
+		</div>					
+
+	<!-- conclusion -->
+		<div class="conclusiondecoration">
+			<p> Our inspiration are think and design in collaboration with <strong>japanese designer. </strong></p>
+			<img src="images/logopage.png" alt="Logogaijin">
+			
+		</div>
 
 	<!-- footer section  -->
    	</div>
