--- a/food.html
+++ b/food.html
@@ -26,11 +26,87 @@
 				<a href="aboutus.html" id="btn-white">About us</a>
 	</div>
 
-	<!-- Text -->
-	<div class="loading">
-		<h2 class="loadingtext"> Please wait until the creator finish the page. </h2>
-		<p>Thank you for your understanding</p>
-		<img src="images/loading.gif" alt="loadingimage">
+	<!-- Headpage -->
+
+	<div class="foodheader">
+		<h2> Food </h2>
+	</div>
+
+	<!-- Storytelling -->
+	<div class="containerfood">
+	<dir class="textfood"> 
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et justo metus. Nullam posuere, urna et consectetur eleifend, dolor ligula iaculis ex, a euismod nulla libero vel purus. Curabitur hendrerit vehicula nunc non bibendum. Nunc massa nulla, vehicula nec nisl id, egestas pellentesque magna. Sed non orci maximus, iaculis ligula ac, cursus mi. Nunc egestas est dui, et placerat nisi vestibulum non. Maecenas mollis non nisl et hendrerit. Integer laoreet, ligula vitae malesuada vulputate, orci mi lobortis odio, quis elementum turpis ligula vitae enim. Nunc placerat et diam non consectetur. </p>
+		<div class="foodjap"><p>本来なら 2人とも死んでもおかしくないが、俺が過渡期に あるときにた またまこんなこと</p></div>
+	</dir>	
+
+	<!-- Foodimage -->
+
+	<div class="menus">
+
+	<div class="grid-food">
+						<a href="#"id="btn-pink">
+						Sushi 
+						</a>
+					<h3 class="japandecorationfood">寿司</h3>
+	</div>
+
+	<div class="grid-foodone">
+						<a href="#"id="btn-pink">
+						Maki
+						</a>
+						<h3 class="japandecorationfood">マキ</h3>
+	</div>
+
+	<div class="grid-foodsecond">
+						<a href="#"id="btn-pink">
+						Yakitori
+						</a>
+						<h3 class="japandecorationfood">カツカレー</h3>
+	</div>
+
+	<div class="grid-foodthird">
+						<a href="#"id="btn-pink">
+						Katsu Curry
+						</a>
+						<h3 class="japandecorationfood">やきとり</h3>
+	</div>					
+
+	<div class="grid-foodfourth">
+						<a href="#"id="btn-pink">
+						FlufflyCake
+						</a>
+						<h3 class="japandecorationfood">鯛焼き</h3>
+	</div>
+
+	<div class="grid-foodfifth">
+						<a href="#"id="btn-pink">
+						Mochi
+						</a>
+						<h3 class="japandecorationfood">フワフワケーキ</h3>
+	</div>
+
+	<div class="grid-foodsix">
+						<a href="#"id="btn-pink">
+						Doriyaki
+						</a>
+						<h3 class="japandecorationfood">ドリヤキ</h3>
+	</div>
+
+	<div class="grid-foodseven">
+						<a href="#"id="btn-pink">
+						Taiyaki
+						</a>
+						<h3 class="japandecorationfood">餅</h3>
+	</div>
+	</div>
+
+	<!-- Botom page -->
+
+		<div class="conclusionfood">
+			<p> Our prodcuts are <strong>100% from Japan.</strong> Importation are made by refrigerated transport  to maintain their <strong>quality and durability.</strong></p>
+			<img src="images/logopage.png" alt="Logogaijin">		
+		</div>
+
 	</div>
 
 	<!-- footer section  -->
