--- a/mangas.html
+++ b/mangas.html
@@ -16,7 +16,7 @@
 	<script src="https://kit.fontawesome.com/a01256c503.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	
+
 	<!-- nav bar section  -->
 	<div class="navbar"> 
 				<a href="index.html" id="btn-white">Home</a>
@@ -26,104 +26,118 @@
 				<a href="aboutus.html" id="btn-white">About us</a>
 	</div>
 
-	<!-- images section -->
-	<div class="liststyle">
-		<h2 class="presentations"> Mangas </h2>
-	<div class="lists">
-		<div class="list">
-			<img src="images/dragonball.png" alt="dragonball">
-			<p class="titremanga">Dragon Ball Z</p>
-			<p class="soustitre">ドラゴンボールZ(ゼット</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/onepiece.png" alt="onepiece">
-			<p class="titremanga">One piece</p>
-			<p class="soustitre">ワンピース</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/naruto.png" alt="naruto">
-			<p class="titremanga">Naruto</p>
-			<p class="soustitre">ナルト</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/attaquedestitans.png" alt="attaquedestitans">
-			<p class="titremanga">Attaque des titans</p>
-			<p class="soustitre">進撃の巨人</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/blackclover.png" alt="blackclover">
-			<p class="titremanga">Black Clover </p>
-			<p class="soustitre">ブラッククローバ</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/jujutsu.png" alt="jujutsu">
-			<p class="titremanga">JuJutsu Kaisen</p>
-			<p class="soustitre">じゅじゅつかいせん</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/demonslayer.png" alt="demonslayer">
-			<p class="titremanga">Demon slayer</p>
-			<p class="soustitre">鬼滅きめつの刃やいば</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/fireforce.png" alt="fireforce">
-			<p class="titremanga">Fireforce</p>
-			<p class="soustitre">炎炎ノ消防隊</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/unterxhunter.png" alt="hunterxhunter">
-			<p class="titremanga">Hunter x hunter</p>
-			<p class="soustitre">ハンターハンタ</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/fullmetal.png" alt="fullmetalalchemist">
-			<p class="titremanga">Full metal alchemist</p>
-			<p class="soustitre">鋼の錬金術師</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/deathnote.png" alt="deathnote">
-			<p class="titremanga">Deathnote</p>
-			<p class="soustitre">デスノート</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-		<div class="list">
-			<img src="images/myhero.png" alt="myheroacademia">
-			<p class="titremanga">My Hero academia</p>
-			<p class="soustitre">僕のヒーローアカデミア</p>
-			<a href="#"id="btn-manga">
-				Discover</a>
-		</div>
-
-	</div>	
+	<!-- Headermanga -->
+	<div class="mangaheader">
+		<h2> Mangas </h2>
 	</div>
 
+	<!-- Storytelling -->
+	<div class="containermanga">
+	<div class="mangalist">
+
+	<div class="grid-mangaun">
+				<h3 class="mangatitle">Dragon ball Z</h3>
+					<h4 class="mangajapanese">ドラゴンボールZ(ゼット</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangadeux">
+				<h3 class="mangatitle">Naruto</h3>
+					<h4 class="japandecorationfood">ナルト</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangatrois">
+				<h3 class="mangatitle">Boruto</h3>
+					<h4 class="japandecorationfood">ボルト</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangaquatre">
+				<h3 class="mangatitle">Bleach</h3>
+					<h4 class="japandecorationfood">ブリーチ</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>					
+
+	<div class="grid-mangacinq">
+				<h3 class="mangatitle">Attaque des titans</h3>
+					<h4 class="japandecorationfood">進撃の巨人</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangasix">
+				<h3 class="mangatitle">Black Clover</h3>
+					<h4 class="japandecorationfood">ブラッククローバ</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangasept">
+				<h3 class="mangatitle">My hero academia</h3>
+					<h4 class="japandecorationfood">僕のヒーローアカデミア</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangahuit">
+				<h3 class="mangatitle">Jujutsu Kaisen</h3>
+					<h4 class="japandecorationfood">呪術廻戦</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+		<div class="grid-manganeuf">
+				<h3 class="mangatitle">One piece</h3>
+					<h4 class="japandecorationfood">ワンピース</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangadix">
+				<h3 class="mangatitle">Fullmetal Alchemist</h3>
+					<h4 class="japandecorationfood">鋼の錬金術師</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangaonze">
+				<h3 class="mangatitle">Hunter x Hunter</h3>
+					<h4 class="japandecorationfood">ハンターハンタ</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangadouze">
+				<h3 class="mangatitle">Fire force</h3>
+					<h4 class="japandecorationfood">炎炎ノ消防隊</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+			<div class="grid-mangatreize">
+				<h3 class="mangatitle">Demon slayer</h3>
+					<h4 class="japandecorationfood">鬼滅きめつの刃やいば</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangaquatorze">
+				<h3 class="mangatitle">Haikyū</h3>
+					<h4 class="japandecorationfood">ハイキュー</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangaquinze">
+				<h3 class="mangatitle">Food wars</h3>
+					<h4 class="japandecorationfood">食戟のソーマ</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+
+	<div class="grid-mangaseize">
+				<h3 class="mangatitle">Kuruko no basket</h3>
+					<h4 class="japandecorationfood">黒子のバスケ</h4>
+						<a href="#"id="btn-violet">Discover</a>
+	</div>
+	</div>
+	
 	<!-- conclusion -->
-		<div class="conclusion">
+	<div class="conclusion">
 			<p>Our products are imported from Tokyo, Japan. They are <strong>100%</strong> certifed and made by the editor. </p>
 			<img src="images/logopage.png" alt="Logogaijin">
 			
-		</div>
+	</div>
 
 	<!-- footer section  -->
    	</div>
